# INTENDRA

./: .gitignore  README.md  UPGRADE_AUDIT_REPORT.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/interndra/: InterndraApplication.kt  MainActivity.kt
app/src/main/java/com/interndra/agent/: TerminalAgent.kt
app/src/main/java/com/interndra/ai/: AICommandRegistry.kt  AiOrchestrator.kt  CloudAiEngine.kt  CommandRegistry.kt  GeminiAiEngine.kt  HybridExecutionEngine.kt  JailbreakEngine.kt  LocalAiEngine.kt  MemoryTrainer.kt  ModelDownloadManager.kt  SafetyEngine.kt
app/src/main/java/com/interndra/jni/: JniTermux.kt
app/src/main/java/com/interndra/plugin/: GitPlugin.kt  NetworkPlugin.kt  PackageManagerPlugin.kt  PluginManager.kt  TermuxPlugin.kt
app/src/main/java/com/interndra/search/: WebSearchEngine.kt
app/src/main/java/com/interndra/service/: AgentAccessibilityService.kt  PersistentShell.kt  ShellExecutor.kt  ShizukuManager.kt  ShizukuShell.kt  SmartShell.kt  TerminalBuffer.kt  TerminalConfig.kt  TermuxBootstrapInstaller.kt  TermuxBridge.kt  TermuxEnvironment.kt
app/src/main/jni/: CMakeLists.txt  termux.c
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml  file_provider_paths.xml  network_security_config.xml
app/src/test/java/com/interndra/: InterndraTest.kt
(+66 files in other folders)
